--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "illuminate/support": "^5.8.3"
+        "illuminate/support": "^5.8.3|^6.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2",
