--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
             "email": "write@robertogallea.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
             "robertogallea\\LaravelVisitor\\": "src/"
@@ -23,7 +22,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "illuminate/support": "^5.8.3|^6.0.0"
+        "illuminate/support": "^5.8.3|^6.0.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2",
